--- a/todolist.html
+++ b/todolist.html
@@ -32,20 +32,7 @@
         <p class="empty-list-message">Sembra non ci siano attività</p>
 
         <!-- Lista attività -->
-        <ul class="todo-list">
-          <li class="todo-item">
-            <div class="todo-check">
-              <img src="images/check.svg" alt="Check Icon" />
-            </div>
-            <p class="todo-text">Ascoltare Filippo</p>
-          </li>
-          <li class="todo-item">
-            <div class="todo-check">
-              <img src="images/check.svg" alt="Check Icon" />
-            </div>
-            <p class="todo-text">Tornare domani</p>
-          </li>
-        </ul>
+        <ul class="todo-list"></ul>
 
         <!-- pannello aggiunta attività -->
         <div class="panel add-todo">
@@ -56,5 +43,8 @@
         </div>
       </main>
     </div>
+
+    <!-- Javascript -->
+    <script type="module" src="./script-todolist.js"></script>
   </body>
 </html>
