Update con local storage

--- a/todolist.html
+++ b/todolist.html
@@ -29,7 +29,7 @@
       <!-- Sezione principale -->
       <main>
         <!-- MEssaggio da mostrare se non ho attività -->
-        <p class="empty-list-message">Sembra non ci siano attività</p>
+        <p class="empty-list-message"></p>
 
         <!-- Lista attività -->
         <ul class="todo-list"></ul>
