Add button delete all

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <img src="./images/logo.svg" alt="Logo Boolean" />
       </header>
       <main>
-        <a href="./todolist.html">Todolist App</a>
+        <nav>
+          <ul>
+            <li class="panel">
+              <a href="./todolist.html">Todolist App</a>
+            </li>
+          </ul>
+        </nav>
       </main>
     </div>
   </body>
