--- a/todolist.html
+++ b/todolist.html
@@ -41,6 +41,11 @@
             <img src="images/add.svg" alt="plus icon" />
           </button>
         </div>
+
+        <!-- Button delete all -->
+        <div class="panel">
+          <button type="button" class="delete-all">Svuota tutti appunti</button>
+        </div>
       </main>
     </div>
 
